// api.proto
// Specifies the governor gRPC interface.

syntax = "proto3";

package governor.api;
option go_package = "github.com/kevmo314/fedtorch/governor/api/go/api";

import "api/gpu.proto";

service Governor {
	// InternalAllocateGPU is a governor-governor gRPC call which attempts to
	// allocate remote resources. This cannot be called by the plugin.
	//
	// TODO(minkezhang): Consider exporting to an internal-only service.
	rpc InternalAllocateGPU(InternalAllocateGPURequest) returns (InternalAllocateGPUResponse) {}
}

message InternalAllocateGPURequest {
	int32 capacity = 2;
}

message InternalAllocateGPUResponse {
	repeated governor.gpu.GPU gpus = 1;
}
